force-app/main/default/objects/Formation__c/fields/Etablissement__c.field-meta.xml
<CustomField>
    <fullName>Etablissement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Etablissement</label>
    <referenceTo>Etablissement__c</referenceTo>
    <relationshipLabel>Formations</relationshipLabel>
    <relationshipName>Formations</relationshipName>
    <type>Lookup</type>
</CustomField>