force-app/main/default/objects/Formation__c/fields/Numero_de_Formation__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Formation__c</fullName>
    <label>Numero de Formation</label>
    <length>4</length>
    <type>Text</type>
</CustomField>