force-app/main/default/objects/Formation__c/fields/Titre__c.field-meta.xml
<CustomField>
    <fullName>Titre__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Titre</label>
    <referenceTo>Titre__c</referenceTo>
    <relationshipLabel>Formations</relationshipLabel>
    <relationshipName>Formations</relationshipName>
    <type>Lookup</type>
</CustomField>