force-app/main/default/objects/Formation__c/fields/Type_de_formation__c.field-meta.xml
<CustomField>
    <fullName>Type_de_formation__c</fullName>
    <label>Type de formation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Antérieure</fullName>
            </value>
            <value>
                <fullName>Postérieure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>